# wall

./: Cargo.toml  graph.uml
backend/: Cargo.toml  diesel.toml
backend/benches/: remove.rs
backend/migrations/2024-08-27-141018_serials/: down.sql  up.sql
backend/migrations/2024-08-28-044626_categories/: down.sql
backend/migrations/2024-09-01-140939_scraper/: up.sql
backend/migrations/2024-09-01-140946_serials_scrapers/: up.sql
backend/src/: db.rs  error.rs  main.rs  schema.rs
backend/src/apps/: catalog.rs
backend/src/db/: catalog.rs  media.rs  mod.rs  serial.rs
backend/src/models/: category.rs  comment.rs  episode.rs  media.rs  mod.rs  scraper.rs
db/: Cargo.toml  diesel.toml
db/migrations/2024-08-27-141018_serials/: up.sql
db/migrations/2024-08-28-021010_medias/: down.sql  up.sql
db/migrations/2024-08-28-033951_users/: up.sql
db/migrations/2024-08-28-042402_ratings/: up.sql
db/migrations/2024-08-28-044626_categories/: up.sql
db/migrations/2024-08-28-054313_comments/: down.sql  up.sql
db/src/: error.rs  lib.rs  schema.rs
db/src/models/: category.rs  episodes.rs  evaluations.rs  media.rs  morph.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: logo.wbm  main.css  navbar.css
frontend/src/: main.rs
frontend/src/components/: navbar.rs
rails-db/: .env  Cargo.toml  diesel.toml  docker-compose.yml
rails-db/migrations/2024-08-25-231855_create_posts/: up.sql
rails-db/migrations/2024-08-27-141018_serials/: up.sql
rails-db/migrations/2024-08-27-173940_episodes/: up.sql
rails-db/migrations/2024-08-28-021010_medias/: down.sql  up.sql
rails-db/migrations/2024-08-28-033755_likes/: up.sql
rails-db/migrations/2024-08-28-033951_users/: up.sql
rails-db/migrations/2024-08-28-033955_likes/: up.sql
rails-db/migrations/2024-08-28-034149_views/: down.sql  up.sql
rails-db/migrations/2024-08-28-042402_ratings/: up.sql
rails-db/migrations/2024-08-28-044626_categories/: up.sql
rails-db/migrations/2024-08-28-044631_categories_serials/: down.sql  up.sql
rails-db/migrations/2024-08-28-054313_comments/: down.sql  up.sql
rails-db/src/: category.rs  comment.rs  lib.rs  media.rs  model.rs  models.rs  schema.rs  user.rs
rails-db/src/models/: category.rs  comment.rs  evaluations.rs  media.rs  mod.rs  user.rs
scraper/: Cargo.toml
scraper/src/: main.rs
