[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
derive_more = { version = "1.0.0", features = ["display", "error"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15.7"
uuid = "1.10.0"
