[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
derive_more = { version = "1.0.0", features = ["display", "error"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["uuid", "chrono"] }
dotenvy = "0.15.7"
uuid = "1.10.0"
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
itertools = "0.13.0"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "remove"
harness = false
